@@ -226,7 +226,9 @@ public:
 
   /* need for putdic */
   int input_conv(const char * word, char * dest);
-  
+  // ^^-deprecated, use this-vv"
+  int input_conv(const char * word, char * dest, size_t destsize);
+ 
   /* experimental and deprecated functions */
 
 #ifdef HUNSPELL_EXPERIMENTAL
